# MyScripts

./: .gitignore  README.md
google_drive/: README.md  google_api.py  requirements.txt
scrapping-buscacursos/: .gitignore  Readme.md  get_teachers.py  main.py  pyproject.toml  requirements.txt
